--- a/bitmex/assets/css/login-styles.css
+++ b/bitmex/assets/css/login-styles.css
@@ -14,8 +14,8 @@ input[type=text], input[type=password] {
 button {
 	background-color: #4CAF50;
 	color: white;
-	padding: 14px 20px;
-	margin: 8px 0;
+	padding: 15px 20px;
+	margin: 10px 0;
 	border: none;
 	cursor: pointer;
 	width: 100%;
@@ -28,14 +28,14 @@ button:hover {
 /* Extra styles for the cancel button */
 .cancelbtn {
 	width: auto;
-	padding: 10px 18px;
+	padding: 10px 20px;
 	background-color: #f44336;
 }
 
 /* Center the image and position the close button */
 .imgcontainer {
 	text-align: center;
-	margin: 24px 0 12px 0;
+	margin: 20px 0 15px 0;
 	position: relative;
 }
 
@@ -45,7 +45,7 @@ img.avatar {
 }
 
 .container {
-	padding: 16px;
+	padding: 20px;
 }
 
 span.psw {
@@ -73,7 +73,8 @@ span.psw {
 	background-color: #fefefe;
 	margin: 5% auto 5% auto; /* 5% from the top, 15% from the bottom and centered */
 	border: 1px solid #888;
-	width: 300px; /* Could be more or less, depending on screen size */
+	width: 400px; /* Could be more or less, depending on screen size */
+	margin-top: 20px;
 }
 
 /* The Close Button (x) */
@@ -121,6 +122,7 @@ span.psw {
 
 .title {
 	text-align: center;
+	margin-top: 5%;
 }
 
 @media (min-width: 768px) {
@@ -133,4 +135,8 @@ span.psw {
 	.container {
 	    width: auto;
 	}
+}
+
+.container label {
+	margin-top: 10px;
 }
