--- a/bitmex/assets/css/styles.css
+++ b/bitmex/assets/css/styles.css
@@ -9,6 +9,9 @@ td.col-title{width: 40%;}
 .panel-group{margin-top: 20px;}
 /*.panel-current-price,.panel-wallet{width: 49%; min-height: 320px; float: left;}*/
 /*.panel-wallet{float: right;}*/
+/*.panel-current-price,.panel-chart{min-height:500px;max-height:500px;}*/
+/*.chart-container{height:100%}*/
+.chart-content{height:400px}
 .panel-actions{clear: both;}
 .panel-group .panel+.panel{margin-top: 0;}
 .panel-orderbook table,.panel-order table{float: left; margin-bottom: 10px!important; margin-left: 10px;}
