--- a/bitmex/assets/css/styles.css
+++ b/bitmex/assets/css/styles.css
@@ -3,6 +3,7 @@ h3{font-size: 14px !important;}
 table{margin-bottom: 0!important; white-space: pre;}
 td{border: 1px solid #eee;}
 td.col-title{width: 40%;}
+ul.nav li{white-space: nowrap;}
 .container{width: 100%; padding: 20px;}
 .table td, .table th{padding: 5px;}
 .panel{/*float: left;*/margin-bottom: 20px!important;}
@@ -19,6 +20,7 @@ td.col-title{width: 40%;}
 .panel-order table{width: 32%!important; float: left;}
 .panel-main-info .panel-info{width: 49%!important; float: left;}
 p.message{margin: 15px;}
+ul.navbar-nav{margin-top: 0px;}
 
 @media only screen and (max-width: 768px) {
 	.panel-body-min{overflow-x: scroll;}
