--- a/bitmex/assets/css/styles.css
+++ b/bitmex/assets/css/styles.css
@@ -1,27 +1,26 @@
-body,table{width: 100%; font-size: 14px;}
-h3{font-size: 14px !important;}
-table{margin-bottom: 0!important; white-space: pre;}
-td{border: 1px solid #eee;}
-td.col-title{width: 40%;}
-ul.nav li{white-space: nowrap;}
-.container{width: 100%; padding: 20px;}
-.table td, .table th{padding: 5px;}
-.panel{/*float: left;*/margin-bottom: 20px!important;}
-.panel-group{margin-top: 20px;}
-.panel-body{margin: 0; padding: 0;}
-/*.panel-current-price,.panel-wallet{width: 49%; min-height: 320px; float: left;}*/
-/*.panel-wallet{float: right;}*/
-/*.panel-current-price,.panel-chart{min-height: 500px;max-height: 500px;}*/
-/*.chart-container{height: 100%}*/
-.chart-content{height: 550px;}
-.panel-actions{clear: both;}
-.panel-group .panel+.panel{margin-top: 0;}
-.panel-orderbook table,.panel-order table{float: left; margin-bottom: 10px!important; margin-left: 10px;}
-.panel-order table{width: 32%!important; float: left;}
-.panel-main-info .panel-info{width: 49%!important; float: left;}
-p.message{margin: 15px;}
-ul.navbar-nav{margin-top: 0px;}
+body,table{width:100%;font-size:14px}
+h3{font-size:14px!important}
+table{margin-bottom:0!important;white-space:pre}
+td{border:1px solid #eee}
+td.col-title{width:40%}
+ul.nav li{white-space:nowrap}
+.container{width:100%;padding:20px}
+.table td,.table th{padding:5px}
+.panel{margin-bottom:20px!important}
+.panel-group{margin-top:20px}
+.panel-body{margin:0;padding:0}
+.chart-content{height:600px}
+.panel-actions{clear:both}
+.panel-group .panel+.panel{margin-top:0}
+.panel-orderbook table,.panel-order table{float:left;margin-bottom:10px!important;margin-left:10px}
+.panel-order table{width:32%!important;float:left}
+.panel-main-info .panel-info{width:49%!important;float:left}
+p.message{margin:15px}
+ul.navbar-nav{margin-top:0}
+body::-webkit-scrollbar{width:0.2em}
+body::-webkit-scrollbar-track{-webkit-box-shadow:inset 0 0 2px rgba(0,0,0,0.3)}
+body::-webkit-scrollbar-thumb{background-color:darkgrey;outline:1px solid slategrey}
 
 @media only screen and (max-width: 768px) {
-	.panel-body-min{overflow-x: scroll;}
+	.panel-body-min{overflow-x:scroll}
 }
